# Python-Learning

./: .rosinstall  .rosinstall.bak
mytest/: CMakeLists.txt  CMakeLists.txt~  package.xml~
mytest/Proj/: test.pro
mytest/build-test-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  test
mytest/launch/: param.launch
mytest/msg/: Num_2.msg
mytest/src/: listener.cpp  talker.cpp  test.pro
nbzd-dji/QTeditor/Sirus/: Sirus.pro  main.cpp
nbzd-dji/echo_node/: CMakeLists.txt  CMakeLists.txt~  package.xml
nbzd-dji/echo_node/src/: echo (copy).cxx  echo.cxx
nbzd-dji/include/: stdHeaders.h
nbzd-dji/opt_control/src/: cvtCmd.cpp
nbzd-dji/uav_core_logic/: CMakeLists.txt~  package.xml
nbzd-dji/uav_core_logic/launch/: uav_core.launch
nbzd-dji/uav_core_logic/src/: generalHeader.h  main.cxx  recvInfo.h
nbzd-dji/uav_ctrl_serial_comm/: CMakeLists.txt  CMakeLists.txt~  package.xml
nbzd-dji/uav_ctrl_serial_comm/include/: stdHeaders.h
nbzd-dji/uav_ctrl_serial_comm/src/: commCtrl.cxx  commCtrl.h~  commRecv.cxx  commSend.cxx
nbzd-dji/uav_guidance_sdk/src/: GuidanceNode.cpp
nbzd-dji/uav_onboard_sdk/dji_sdk/launch/: sdk_manifold.launch  sdk_manifold.launch~  sdk_osx.launch  sdk_osx.launch~
nbzd-dji/uav_onboard_sdk/dji_sdk_demo/: CMakeLists.txt
nbzd-dji/uav_onboard_sdk/dji_sdk_demo/src/: client (copy).cxx  client.cxx
nbzd-dji/uav_read_cam/src/: webCameraRead.cpp
nbzd-dji/uav_vision/: CMakeLists.txt~  package.xml
nbzd-dji/uav_vision/src/: Object.h  deteColor.cpp  detectDoll.cxx  detectMarker (copy).cxx  detectMarker.cxx  utilities.cpp
(+5 files in other folders)
